# ModernCppStarter

./: .cmake-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: documentation.yaml  install.yml  macos.yml  standalone.yml  style.yml  ubuntu.yml  windows.yml
all/: CMakeLists.txt
cmake/: PackageProject.cmake  tools.cmake
documentation/: CMakeLists.txt
standalone/: CMakeLists.txt
test/: CMakeLists.txt
test/source/: greeter_tests.cpp
